@@ -7,6 +7,7 @@ version next:
 - filter for loudness analysis following EBU R128
 - Opus encoder using libopus
 - ffprobe -select_streams option
+- Pinnacle TARGA CineWave YUV16 decoder
 
 
 version 1.0:
